; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_free_user_struct.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_free_user_struct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UG_MODE = common dso_local global i64 0, align 8
@NOTIFY_MODE = common dso_local global i64 0, align 8
@RECOMMEND_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @free_user_struct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_user_struct(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i64, i64* @UG_MODE, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @zfree(i32* %6, i32 4)
  br label %20

8:                                                ; preds = %1
  %9 = load i64, i64* @NOTIFY_MODE, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @zfree(i32* %12, i32 4)
  br label %19

14:                                               ; preds = %8
  %15 = load i32, i32* @RECOMMEND_MODE, align 4
  %16 = call i32 @assert(i32 %15)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @zfree(i32* %17, i32 4)
  br label %19

19:                                               ; preds = %14, %11
  br label %20

20:                                               ; preds = %19, %5
  ret void
}

declare dso_local i32 @zfree(i32*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
